// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the Card component number box should grow elegantly with larger numbers 1`] = `
<View
  collapsable={false}
  style={
    Object {
      "padding": 10,
    }
  }
>
  <View
    style={
      Object {
        "aspectRatio": 1,
        "backgroundColor": "#dddddd",
        "borderRadius": 6,
        "height": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "borderRadius": 6,
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        style={
          Object {
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          size={4}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#ffffff",
              "borderBottomRightRadius": 6,
              "borderTopLeftRadius": 6,
              "height": 72,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": 72,
            }
          }
        >
          <View>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#303030",
                  "fontFamily": "Colfax-Bold",
                  "fontSize": 15.75,
                  "lineHeight": 17.75,
                  "paddingBottom": 1.8,
                  "paddingTop": 4.5,
                }
              }
            >
              7777
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "paddingHorizontal": 20,
              "paddingVertical": 15,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#303030",
                "fontFamily": "Colfax-Bold",
                "fontSize": 25.2,
                "lineHeight": 31.28,
                "paddingBottom": 3.71,
                "paddingTop": 5.04,
              }
            }
          >
            Why Jesus Is Timeless
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`the Card component should render 1`] = `
<View
  collapsable={false}
  style={
    Object {
      "padding": 10,
    }
  }
>
  <View
    style={
      Object {
        "aspectRatio": 1,
        "backgroundColor": "#dddddd",
        "borderRadius": 6,
        "height": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "borderRadius": 6,
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        style={
          Object {
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          style={
            Object {
              "paddingHorizontal": 20,
              "paddingVertical": 15,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#303030",
                "fontFamily": "Colfax-Bold",
                "fontSize": 25.2,
                "lineHeight": 31.28,
                "paddingBottom": 3.71,
                "paddingTop": 5.04,
              }
            }
          >
            Why Jesus Is Timeless
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`the Card component should render a loading skeleton 1`] = `
<View
  collapsable={false}
  style={
    Object {
      "padding": 10,
    }
  }
>
  <View
    style={
      Object {
        "aspectRatio": 1,
        "backgroundColor": "#dddddd",
        "borderRadius": 6,
        "height": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "borderRadius": 6,
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        style={
          Object {
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          style={
            Object {
              "paddingHorizontal": 20,
              "paddingVertical": 15,
            }
          }
        >
          <View
            style={
              Object {
                "alignSelf": "stretch",
                "backgroundColor": "#f7f7f7",
                "borderRadius": 6,
                "height": 25.2,
                "marginVertical": 3.040000000000001,
                "width": "80%",
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`the Card component should render a loading skeleton for all available props 1`] = `
<View
  collapsable={false}
  style={
    Object {
      "padding": 10,
    }
  }
>
  <View
    style={
      Object {
        "aspectRatio": 1,
        "backgroundColor": "#dddddd",
        "borderRadius": 6,
        "height": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "borderRadius": 6,
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        style={
          Object {
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          size={1}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#ffffff",
              "borderBottomRightRadius": 6,
              "borderTopLeftRadius": 6,
              "height": 36,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": 36,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#f7f7f7",
                "borderRadius": 6,
                "height": 45,
                "width": 45,
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "paddingHorizontal": 20,
              "paddingVertical": 15,
            }
          }
        >
          <View
            style={
              Object {
                "alignSelf": "stretch",
                "backgroundColor": "#f7f7f7",
                "borderRadius": 6,
                "height": 25.2,
                "marginVertical": 3.040000000000001,
                "width": "80%",
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "flexWrap": "wrap",
              "justifyContent": "space-between",
              "paddingHorizontal": 20,
              "paddingTop": 5,
              "paddingVertical": 20,
            }
          }
        >
          <View
            flexed={true}
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#f7f7f7",
                  "borderRadius": 6,
                  "height": 21.6,
                  "width": 21.6,
                }
              }
            />
            <View
              style={
                Object {
                  "flex": 1,
                  "paddingHorizontal": 10,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignSelf": "stretch",
                    "backgroundColor": "#f7f7f7",
                    "borderRadius": 6,
                    "height": 14,
                    "marginVertical": 0.8899999999999997,
                    "width": "40%",
                  }
                }
              />
            </View>
          </View>
          <View
            style={
              Object {
                "alignSelf": "stretch",
                "backgroundColor": "#f7f7f7",
                "borderRadius": 6,
                "height": 14,
                "marginVertical": 0.8899999999999997,
                "width": "40%",
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`the Card component should render a number box 1`] = `
<View
  collapsable={false}
  style={
    Object {
      "padding": 10,
    }
  }
>
  <View
    style={
      Object {
        "aspectRatio": 1,
        "backgroundColor": "#dddddd",
        "borderRadius": 6,
        "height": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "borderRadius": 6,
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        style={
          Object {
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          size={1}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#ffffff",
              "borderBottomRightRadius": 6,
              "borderTopLeftRadius": 6,
              "height": 36,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": 36,
            }
          }
        >
          <View>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#303030",
                  "fontFamily": "Colfax-Bold",
                  "fontSize": 15.75,
                  "lineHeight": 17.75,
                  "paddingBottom": 1.8,
                  "paddingTop": 4.5,
                }
              }
            >
              7
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "paddingHorizontal": 20,
              "paddingVertical": 15,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#303030",
                "fontFamily": "Colfax-Bold",
                "fontSize": 25.2,
                "lineHeight": 31.28,
                "paddingBottom": 3.71,
                "paddingTop": 5.04,
              }
            }
          >
            Why Jesus Is Timeless
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`the Card component should render card details 1`] = `
<View
  collapsable={false}
  style={
    Object {
      "padding": 10,
    }
  }
>
  <View
    style={
      Object {
        "aspectRatio": 1,
        "backgroundColor": "#dddddd",
        "borderRadius": 6,
        "height": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "borderRadius": 6,
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        style={
          Object {
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          size={1}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#ffffff",
              "borderBottomRightRadius": 6,
              "borderTopLeftRadius": 6,
              "height": 36,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": 36,
            }
          }
        >
          <View>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#303030",
                  "fontFamily": "Colfax-Bold",
                  "fontSize": 15.75,
                  "lineHeight": 17.75,
                  "paddingBottom": 1.8,
                  "paddingTop": 4.5,
                }
              }
            >
              7
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "paddingHorizontal": 20,
              "paddingVertical": 15,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#303030",
                "fontFamily": "Colfax-Bold",
                "fontSize": 25.2,
                "lineHeight": 31.28,
                "paddingBottom": 3.71,
                "paddingTop": 5.04,
              }
            }
          >
            Why Jesus Is Timeless
          </Text>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "flexWrap": "wrap",
              "justifyContent": "space-between",
              "paddingHorizontal": 20,
              "paddingTop": 5,
              "paddingVertical": 20,
            }
          }
        >
          <View
            flexed={true}
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
              }
            }
          >
            <Svg
              height={21.6}
              viewBox="0 0 24 24"
              width={21.6}
            >
              <Path
                d="M3.8182 5.7778v12.4444H14.2V5.7778H3.8182zM16 6v12c0 1.1046-.8954 2-2 2H4c-1.1046 0-2-.8954-2-2V6c0-1.1046.8954-2 2-2h10c1.1046 0 2 .8954 2 2zm4.1818 2.6952L16 11.8084v.3832l4.1818 3.251V8.695zM16 14.4957V9.4253l6-4.2178v13.585l-6-4.2968z"
                fill="#505050"
              />
            </Svg>
            <View
              style={
                Object {
                  "flex": 1,
                  "paddingHorizontal": 10,
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#505050",
                    "fontFamily": "Colfax-Regular",
                    "fontSize": 14,
                    "lineHeight": 15.78,
                    "paddingBottom": 1.8,
                    "paddingTop": 3.6,
                  }
                }
              >
                Marty Mcfly
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`the Card component should render card details with date 1`] = `
<View
  collapsable={false}
  style={
    Object {
      "padding": 10,
    }
  }
>
  <View
    style={
      Object {
        "aspectRatio": 1,
        "backgroundColor": "#dddddd",
        "borderRadius": 6,
        "height": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "borderRadius": 6,
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        style={
          Object {
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          size={1}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#ffffff",
              "borderBottomRightRadius": 6,
              "borderTopLeftRadius": 6,
              "height": 36,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": 36,
            }
          }
        >
          <View>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#303030",
                  "fontFamily": "Colfax-Bold",
                  "fontSize": 15.75,
                  "lineHeight": 17.75,
                  "paddingBottom": 1.8,
                  "paddingTop": 4.5,
                }
              }
            >
              7
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "paddingHorizontal": 20,
              "paddingVertical": 15,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#303030",
                "fontFamily": "Colfax-Bold",
                "fontSize": 25.2,
                "lineHeight": 31.28,
                "paddingBottom": 3.71,
                "paddingTop": 5.04,
              }
            }
          >
            Why Jesus Is Timeless
          </Text>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "flexWrap": "wrap",
              "justifyContent": "space-between",
              "paddingHorizontal": 20,
              "paddingTop": 5,
              "paddingVertical": 20,
            }
          }
        >
          <View
            flexed={true}
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
              }
            }
          >
            <Svg
              height={21.6}
              viewBox="0 0 24 24"
              width={21.6}
            >
              <Path
                d="M3.8182 5.7778v12.4444H14.2V5.7778H3.8182zM16 6v12c0 1.1046-.8954 2-2 2H4c-1.1046 0-2-.8954-2-2V6c0-1.1046.8954-2 2-2h10c1.1046 0 2 .8954 2 2zm4.1818 2.6952L16 11.8084v.3832l4.1818 3.251V8.695zM16 14.4957V9.4253l6-4.2178v13.585l-6-4.2968z"
                fill="#505050"
              />
            </Svg>
            <View
              style={
                Object {
                  "flex": 1,
                  "paddingHorizontal": 10,
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#505050",
                    "fontFamily": "Colfax-Regular",
                    "fontSize": 14,
                    "lineHeight": 15.78,
                    "paddingBottom": 1.8,
                    "paddingTop": 3.6,
                  }
                }
              >
                Marty Mcfly
              </Text>
            </View>
          </View>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#303030",
                "fontFamily": "Colfax-Regular",
                "fontSize": 14,
                "lineHeight": 15.78,
                "paddingBottom": 1.8,
                "paddingTop": 3.6,
              }
            }
          >
            33y
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`the Card component should render children 1`] = `
<View
  collapsable={false}
  style={
    Object {
      "padding": 10,
    }
  }
>
  <View
    style={
      Object {
        "aspectRatio": 1,
        "backgroundColor": "#dddddd",
        "borderRadius": 6,
        "height": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "borderRadius": 6,
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        style={
          Object {
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          Biff Tannen was here
        </Text>
      </View>
    </View>
  </View>
</View>
`;
